# compiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  index.md  main.c  run_tests  test.c  update_test
.github/workflows/: c-cpp.yml
docs/: spec.md
include/: analysis.h  ast.h  builtins.h  codegen.h  lexer.h  misc.h  options.h  parser.h  type.h  vec.h
src/: CMakeLists.txt  analysis.c  analysis.h  builtins.c  codegen.c  codegen.h  lexer.c  lexer.h  main.c  misc.c  misc.h  parser.c  parser.h  type.c  type.h  vec.c  vec.h
src/ast/: casts.c  fn_call.c  if_stmt.c  literals.c  return.c  variables.c
tests/assign_before_declare/: input.c  output
tests/factorial/: input.c
tests/fn_call/: input.c
tests/function_parameters/: input.c  last_output
tests/if_statement/: input.c
tests/if_statement_no_merge/: input.c
tests/math/: input.c
tests/minimal_function/: input.c  last_output  output
tests/no_input_file/: cmd  output
tests/referenced_before_declare/: input.c  last_output
tests/return_value/: input.c
tests/symbol_already_declared/: input.c  output
tests/test_example/: input.c  output
tests/unknown_function/: input.c  last_output
tests/variables/: input.c
